--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "slim/psr7": "^0.5.0"
     },
     "scripts": {
-        "start": "php -S localhost:8080 -t . public/index.php"
+        "start": "php -S localhost:8080 -t . router.php"
     },
     "scripts-descriptions": {
-        "start": "Start development server on http://localhost:8888"
+        "start": "Start development server on http://localhost:8080"
     },
     "config": {
         "process-timeout": 0
